--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -135,7 +135,7 @@
 
         <span class="text-gray-300">|</span>
 
-        <a href="YOUR_LINKEDIN_URL_HERE" target="_blank" rel="noopener noreferrer" class="inline-flex items-center text-gray-400 hover:text-indigo-600 transition duration-150 whitespace-nowrap">
+        <a href="https://www.linkedin.com/in/tauqeer-sayeed/" target="_blank" rel="noopener noreferrer" class="inline-flex items-center text-gray-400 hover:text-indigo-600 transition duration-150 whitespace-nowrap">
             <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 24 24" class="mr-1">
                 <path d="M19 0h-14c-2.761 0-5 2.239-5 5v14c0 2.761 2.239 5 5 5h14c2.762 0 5-2.239 5-5v-14c0-2.761-2.238-5-5-5zm-11 19h-3v-11h3v11zm-1.5-12.268c-.966 0-1.75-.79-1.75-1.764s.784-1.764 1.75-1.764 1.75.79 1.75 1.764-.783 1.764-1.75 1.764zm13.5 12.268h-3v-5.604c0-3.368-4-3.532-4 0v5.604h-3v-11h3v1.765c1.396-2.586 7-2.777 7 2.476v6.759z"/>
             </svg>
