--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shared Credential Portal</title>
-    <link rel="icon" type="image/x-icon" href="/src/main/resources/templates/MITLOGO.png">
+<!--    <link rel="icon" type="image/png" href="/static/MITLOGO.png">-->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
@@ -24,7 +24,7 @@
 <!-- Top Header -->
 <header class="w-full py-6 mb-6 rounded-xl shadow-lg bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 flex flex-col items-center justify-center">
     <h1 class="text-2xl sm:text-3xl font-extrabold text-white drop-shadow-lg text-center">
-        Welcome, Shared Service Team
+        Welcome, Shared Service Team(Mobily Infotech)
     </h1>
     <p class="mt-1 text-base sm:text-lg text-white/90 text-center font-medium">
         (QA_ITCR_PBI)
